Phase-000: Fixing bugs and making some improvements